<resources>
    <string name="app_name">lib_icon</string>
    <string name="error_default">未知错误，请稍后重试</string>
    <string name="error_net">网络连接失败，请检查网络设置</string>
    <string name="error_timeout">网络状况不稳定，请稍后重试</string>
    <string name="error_json">JSON解析异常</string>
    <string name="error_http">请求错误，请稍后重试</string>
    <string name="error_host">服务器连接失败，请检查网络设置</string>
    <string name="error_SSL">证书验证失败</string>
    <string name="regist">去注册</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="official_accounts">公众号</string>
    <string name="project">项目</string>
    <string name="navigation">导航</string>
    <string name="my_integral">我的积分</string>
    <string name="my_collect">我的收藏</string>
    <string name="setting">设置</string>
    <string name="later_read">稍后阅读</string>
    <string name="about">关于</string>
    <string name="hotkey">热门搜索</string>
    <string name="history_search">历史搜索</string>

</resources>
